overflow hidden added to body to avoid horizontal scrolling as projects-wrapper has overflown animation

--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -29,6 +29,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 
   img {
     max-width: 100%;
