--- a/source/stylesheets/components/_projects.scss
+++ b/source/stylesheets/components/_projects.scss
@@ -10,9 +10,9 @@
     display: flex;
     flex-direction: column;
 
-    @include respond(mobile-devices) {
-      overflow-x: hidden;
-    }
+    // @include respond(mobile-devices) {
+    //   overflow-x: hidden;
+    // }
   }
 }
 
